Bug 230680 - No warning when renaming folders with slashes
Summary: No warning when renaming folders with slashes
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: new folder tree (other bugs)
Version First Reported In: 1.13.1
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-14 11:54 UTC by Ronny Standtke
Modified: 2011-09-14 14:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ronny Standtke 2010-03-14 11:54:00 UTC
Version:            (using KDE 4.4.1)
Installed from:    Ubuntu Packages

When creating a new folder and using a slash in the folder's name, Kontact gives the following error message:
"Folder names cannot contain the / (slash) character; please choose another folder name."

When renaming a folder via its properties and using a slash in the name, nothing happens at all. The folder is not renamed and the error message above is not shown.

It would be better if the error message above would also be shown when renaming a folder.

It would be even *MUCH* better when this internal restriction (no slashes in folder names) would not be presented to the user at all but the (restriction free) user visible folder name would be internally mapped to a folder name that adheres to all internal restrictions.
Comment 1 Laurent Montel 2010-09-02 14:20:06 UTC
SVN commit 1170985 by mlaurent:

Fix bug #230680
BUG: 230680
No merge in trunk code is not the same.


 M  +1 -1      kmailicalifaceimpl.cpp  
 M  +7 -7      kmfolder.cpp  
 M  +1 -1      kmfolder.h  
 M  +4 -0      kmfolderdialog.cpp  
 M  +1 -1      newfolderdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1170985
Comment 2 Ronny Standtke 2011-01-27 15:24:02 UTC
I just tested with KDE-4.6 and the issue is still there, just slightly different:

When creating a new folder and using a slash in the folder's name, Kontact
gives the error message, when renaming a folder via its properties and using a slash in the name, the slash is silently discarded.

This is inconsistent and confusing. The behaviour should be the same with both actions, either show a warning message in both cases or remove this internal restriction.
Comment 3 Laurent Montel 2011-09-14 14:24:29 UTC
Git commit 8c6a23d462c6a6dde2ea225865fc872a04a5cf23 by Montel Laurent.
Committed on 14/09/2011 at 16:23.
Pushed by mlaurent into branch 'master'.

Add info that we can't add '/' in folder name

BUG:230680

M  +9    -2    akonadi/standardactionmanager.cpp

http://commits.kde.org/kdepimlibs/8c6a23d462c6a6dde2ea225865fc872a04a5cf23
Comment 4 Laurent Montel 2011-09-14 14:25:47 UTC
Git commit e0afb8152b2cee153df0735adebb7e098473df3a by Montel Laurent.
Committed on 14/09/2011 at 16:24.
Pushed by mlaurent into branch 'master'.

Add visual info to signal that we can't rename folder to empty string or we can't have "/" in name.

FIXED-IN: 4.7.2
BUG: 230680

M  +20   -1    mailcommon/collectiongeneralpage.cpp
M  +1    -0    mailcommon/collectiongeneralpage.h

http://commits.kde.org/kdepim/e0afb8152b2cee153df0735adebb7e098473df3a
Comment 5 Laurent Montel 2011-09-14 14:26:56 UTC
Git commit 92c7fe82d3964dcce31adfaf6fedc66e890ae6cf by Montel Laurent.
Committed on 14/09/2011 at 16:24.
Pushed by mlaurent into branch '4.7'.

Add visual info to signal that we can't rename folder to empty string or we can't have "/" in name.

FIXED-IN: 4.7.2
BUG: 230680
(cherry picked from commit e0afb8152b2cee153df0735adebb7e098473df3a)

M  +20   -1    mailcommon/collectiongeneralpage.cpp
M  +1    -0    mailcommon/collectiongeneralpage.h

http://commits.kde.org/kdepim/92c7fe82d3964dcce31adfaf6fedc66e890ae6cf
Comment 6 Laurent Montel 2011-09-14 14:28:29 UTC
I can't add new i18n in 4.7 so I add this messagebox in 4.8 to signal that we can't add a name with "/".
And I don't want to add new kmessagebox when we rename it
=> I add a visual effect 'red color when name is bad'
It's enough I think.