Add info that we can't add '/' in folder name

BUG:230680